--- a/templates/about.html
+++ b/templates/about.html
@@ -301,7 +301,7 @@
                     <div class="col-lg-12">
                         <div class="footer-copy-right text-center">
                             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                              Copyright &copy;<script>document.write(new Date().getFullYear());</script> Усі права незахищені. Цей проект зроблен Андрієм та Денисом для GO ITeens
+                              Copyright &copy;<script>document.write(new Date().getFullYear());</script> Усі права захищені. Цей проект зроблений Денисом для GO ITeens!
                               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                           </div>
                       </div>
