--- a/templates/courses.html
+++ b/templates/courses.html
@@ -45,7 +45,7 @@
                 <div class="container-fluid">
                     <div class="menu-wrapper d-flex align-items-center justify-content-between">
                         <!-- Logo -->
-                        <div class="logo">static/
+                        <div class="logo">
                             <a href="index.html"><img src="static/assets/img/logo/logo.png" alt=""></a>
                         </div>
                         <!-- Main-menu -->
@@ -292,7 +292,7 @@
                     <div class="col-lg-12">
                         <div class="footer-copy-right text-center">
                             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                              Copyright &copy;<script>document.write(new Date().getFullYear());</script> Усі права незахищені. Цей проект зроблен Андрієм та Денисом для GO ITeens
+                              Copyright &copy;<script>document.write(new Date().getFullYear());</script> Усі права захищені. Цей проект зроблений Денисом для GO ITeens!
                               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                           </div>
                       </div>
